--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,15 +1,20 @@
 .cardContainer {
   /* display */
+  position: relative;
+  margin: auto auto;
   display: flex;
+  max-width: 1080px;
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   overflow: hidden;
+  
 }
 
 .card {
   /* display, flex-direction, flex-grow, flex-basis */
   display: flex;
   flex-direction: column;
+  justify-content: center;
   flex-grow: 1;
   flex-basis: 150px;
   min-width: 100px;
